@@ -1,3 +1,4 @@
+* Add configuration for maximum size of document incoming request
 
 Version 7.2.0 - 2024-04-29
 --------------------------
